<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".TagActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"
        android:title="Add Tag" />

    <item
        android:id="@+id/menu_selectall"
        app:showAsAction="never"
        android:title="Select all" />

    <item
        android:id="@+id/menu_deselectall"
        app:showAsAction="never"
        android:title="Deselect all" />



</menu>