...
    tools:context="com.gallery.android.gallery.ImageFullscreenActivity"
    android:id="@+id/fullscreen_relative_layout">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fullscreen_image_view" />

</RelativeLayout>

