...

    <item
        android:id="@+id/deleteButton"
        android:title="Delete" />
    <item
        android:id="@+id/renameButton"
        android:title="Rename" />

    <item
        android:id="@+id/rotateButton"
        android:title="Rotate" />

    <item
...
